# Iris

./: CMakeLists.txt  README.md  pets-1753963765544.json
configure/: linux_macos.sh  windows.bat
demos/: opponent_vs_me.cpp
documentation/: animations.md  audio.md  camera.md  graphics.md  input.md  logging.md  math.md  window_management.md
src/: main.cpp
src/iris/: iris_audio.cpp  iris_audio.h  iris_fs.cpp  iris_fs.h  iris_graphics.cpp  iris_graphics.h  iris_input.cpp  iris_input.h  iris_logging.h  iris_math.cpp  iris_math.h  iris_window.cpp  iris_window.h
